# xray_mai_bot_v2_pver

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
src/libraries/: GLOBAL_CONSTANT.py  GLOBAL_PATH.py
src/plugins/xray_plugin_black_list/: __init__.py
src/plugins/xray_plugin_maimaidx/: __init__.py
src/plugins/xray_plugins_userdata/: __init__.py
src/static/: location.json
src/static/dragon/: 0GCHq  0HMZUgs  0J5bhx  0JlwLa  0NcQrL1  0O174J  0OMXSz3C  0ahIbMQ  0cjmMi  0iaTdb  0ibejAs4
src/static/maimaidx/completion_status_table/: level_ds_list.json
src/static/maimaidx/maimai_music_data/: background.png.bak
src/static/maimaidx/player_best_50_abstract/: background.png.bak
src/static/maimaidx/player_best_50_normal/: background.png.bak
src/static/maimaidx/player_music_score/: background.png.bak  background.png.bak.bak
src/static/maimaidx/utage_song_data/: utg_song_data.json
