[project]
name = "xray_mai_bot_v2_pver"
version = "0.1.0"
description = "xray_mai_bot_v2"
readme = "README.md"
requires-python = "<3.13,>=3.9"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[tool.poetry]
name = "xray_mai_bot_v2_pver"
version = "0.1.0"
description = "A brief description of your project"
authors = [
    "Ekzykes <atlaseuan@163.com>",
    "Chara_SS <chara_ss@outlook.com>"
]
package-mode = false

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
nonebot2 = { extras = ["fastapi"], version = "^2.3.2" }
pillow = "9.5.0"
nb-cli = "1.2.2"
pymongo = "3.11.3"
nonebot-adapter-onebot = "^2.4.4"
aiofiles = "^24.1.0"
peewee = "^3.17.6"
aiohttp = "^3.10.0"
psutil = "^6.0.0"
blackboxprotobuf = "^1.0.1"
nonebot-plugin-imageutils = "^0.1.17"
nonebot-plugin-localstore = "^0.7.0"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"
